# mesh

./: .gitignore  install-system-libs.sh  pyproject.toml  requirements.txt
mesh/cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
mesh/serialization/: serialization.py
